Fix nav menu on mobiles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,7 +88,6 @@ hr.divider:after {
 
 .blog-post.container {
   text-align: left;
-  max-width: 90vw;
 }
 
 .blog-post.container h1 {
