--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -56,10 +56,6 @@
   width: 154px !important;
 }
 
-.main-nav .nav-menu, .main-nav .nav-menu ul {
-  float: right;
-}
-
 /* mobile */
 @media (max-width: 40em) {
   .main-nav .nav-menu-button {
@@ -69,8 +65,13 @@
     right: 0px;
     left: auto;
   }
-  .main-nav .nav-menu .pure-menu-list {
+  
+  .custom-toggle:not(.x) + .nav-menu {
     display: none;
+  }
+  
+  .custom-toggle.open.x + .nav-menu {
+    display: inherit;
   }
 
 }
